--- a/app/globals.css
+++ b/app/globals.css
@@ -208,3 +208,14 @@ button {
      the labels and their text fields */
   margin-left: 0.5em;
 }
+
+.media {
+  border: 2px dotted rgb(96 139 168);
+  display: flex;
+  align-items: flex-start;
+}
+
+.media .content {
+  flex: 1;
+  padding: 10px;
+}
