--- a/app/globals.css
+++ b/app/globals.css
@@ -105,10 +105,10 @@ img {
 }
 
 .cards {
-  max-width: 700px;
+  max-width: 1000px;
   margin: 1em auto;
 
-  display: grid;
+  display: inline;
   grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
   grid-gap: 20px;
 }
